# EmbeddedDataScientist

./: .gitignore  CPPOpenCV_SetUp.sh  Makefile.mak  README.md  git_help.txt
C/: funptr.c  hdr.h  practice.c
C/Enum/: enum.c  enum01.c  loop.c  strcut_pos.c  struct_pos.c  switch.c
C/RLValue/: lvalue.c
C/Union/: union01.c  union02.c
C/malloc/: TwoDArray.c  malloc01.c  malloc02.c  sbrk.c
CMake/dir001/: CMakeLists.txt  main.cpp
Cpp/: C_Hello.cpp  Chodu.cpp  Doubly_LinkList.c  Doubly_LinkList1.c  English.txt  Example.txt  Exception Handling.txt  FarewellLetter.txt  Fillers.txt  GCC.txt  GTestRough.txt  Hello.c  IPAddress.txt  Introduction.txt  Jupyter_Table.txt  KpitQuestiontxt.txt  Lambda_function.cpp  LetterToHiringManager  Me.txt  Memory.txt  MemoryLayout.txt  Pro.txt  ProcessId.txt  RoughM.Tech  TerminalCommand.txt  Testing  Testing.txt  class_01.cpp  const_01.cpp  const_02.cpp  cppfile.cpp  dynamic_prog.cpp  email.txt  even_num.c  file1.cpp  file2.cpp  fptr.c  hello.cpp  hello2.c  hello_world.c  (+23 more)
Cpp/ConstExpr/: CMakeLists.txt  ConstExprFun.cpp  constExpr.hpp  constExpr01.cpp
Python/: MarkDown.ipynb  c_file.txt  climate_data.py  create_folder_inside_folder.py  decorator_class.py  del_env.py  fib.py  find_files_through_walk.py  fun1.py  itertools01.py  list_dir.py  logging.py  norm_path.py  os.py  os_ver01.py  os_ver03.py  os_ver04.py  os_ver_02.py  overload_add.py  platform1.py  read_file.py  read_host_name.py  read_host_ver_01.py  rec1.py  rename_ctet_files.py  request.py  reverse_str.py  rough.txt  run_command.py  square.py  status_bar.py  thread_01.py
(+176 files in other folders)
